# Speechify_EAS_Listener

./: .gitignore  AGENTS.md  BalRegisterVoice.bat  CLAUDE.md  README.md  SWItts_UpdateHistory.txt  att_speak.py  build_voice_skin.py  diag_ground_truth.py  patch_durt.py  patch_f0tr.py  requirements.txt  vip_dicta.txt
.github/workflows/: build-installer.yml
SpeechWorks/include/: VXIcompilerMsvc.h  VXIheaderPrefix.h  VXIheaderSuffix.h  VXItypes.h  VXIvalue.h
SpeechWorks/lib/: VXIvalue.lib
config/: SWIttsConfig.dtd  SWIttsConfig.xml  SWIttsConfig.xsl  SWIttsConfigMMC.xml
doc/: ErrorMessages.dtd  SpeechifyErrors.en-US.xml  SpeechifyErrors.xsl  doc-index.html  doc.js  lexicon.dtd  styles.css  synthesis-core.xsd  synthesis.dtd  synthesis.xsd
en-US/aimara/: aimara.vcf  aimara8.xml
en-US/jill/: Ojill8.xml  jill.vcf  jill8.xml
en-US/mara/: README.md
en-US/tom/: Otom8.xml  tom.vcf  tom8.xml
es-MX/javier/: Ojavier8.xml  javier.vcf  javier8.xml
fr-CA/felix/: Ofelix8.xml  felix.vcf  felix8.xml
installer/: refresh_voices.bat  spfy_setup.iss
reveng/: DLL_ANALYSIS.md  EXPERIMENTS.md  README.md  README_TECHNICAL.md  SPEED_FIX.md  build_voice_pipeline.py  vcf_edit.py
reveng/voice_cloning/: README.md  audiosr_batch.py  diag_pitch.py  extract_tom_wavs.py  find_best_training_wavs.py  frida_viterbi_penalty.py  rvc_batch.py
spfy/: .gitignore  CMakeLists.txt  README.md
spfy/data/fe_tables/: manifest.csv
spfy/data/fe_tables_a/: manifest.csv
spfy/src/wsola/: wav.c  wav.h
viz/: README.md  app.py  requirements.txt  run_viz.py  worker.py
viz/frida_hooks/: manager.py  viterbi_hook.js
viz/parsers/: vdb_parser.py  vin_parser.py
viz/static/: index.html
viz/static/css/: main.css
viz/static/js/: app.js  audio-player.js  synth-tracer.js  tree-viz.js  vdb-explorer.js  vin-explorer.js
